<resources>
    <string name="app_name">Daftar Hero MLBB</string>
    <string name="heroes_name">Nama Pahlawan</string>
    <string name="gelar">gelar</string>
    <string name="spesialisasi">spesialisasi</string>
    <string name="peran">peran</string>
    <string name="rilis_date">Tahun Rilis</string>
    <string name="detail">detail</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="About">About</string>
    <string name="Namaku">Moh. Novil Maarij</string>
    <string name="emailku">mohnovil.2213@mhs.unesa.ac.id</string>
    <string name="tentangku">hello, my name is Moh. Novil Maarij, I am an undergraduate student in Informatics Engineering at Surabaya State University. I am happy with the world of design and my hobby is design</string>
    <string name="share">Share</string>
    <string-array name="data_hero">
        <item>Miya</item>
        <item>Zilong</item>
        <item>Nana</item>
        <item>Alice</item>
        <item>Tigreal</item>
        <item>Alucard</item>
        <item>Karina</item>
        <item>Akai</item>
        <item>Bane</item>
        <item>Clint</item>
        <item>Bruno</item>
        <item>Eudora</item>
        <item>Fanny</item>
        <item>Hayabusa</item>
    </string-array>
    <string-array name="data_gelar">
        <item>Sang Pemanan Cahaya Bulan</item>
        <item>Tombak Naga</item>
        <item>Si Leonin Yang Manis</item>
        <item>Sang Ratu Darah</item>
        <item>Sang Prajurit Fajar</item>
        <item>Sang Pemburu Iblis</item>
        <item>Pedang Bayangan</item>
        <item>Sang Prajurit Panda</item>
        <item>Sang Raja Beku</item>
        <item>Hakim Barat</item>
        <item>Sang Pelindung</item>
        <item>Sang Penenun Petir</item>
        <item>Sang Penari Pedang</item>
        <item>Sang Bayangan Merah</item>
    </string-array>
    <string-array name="data_peran">
        <item>Penembak Jitu</item>
        <item>Pejuang/Pembunuh</item>
        <item>Penyihir</item>
        <item>Penyihir/Tank</item>
        <item>Tank</item>
        <item>Pejuang/Pembunuh</item>
        <item>Pembunuh</item>
        <item>Tank</item>
        <item>Petarung/Penyihir</item>
        <item>Penembak Jitu</item>
        <item>Penembak Jitu</item>
        <item>Penyihir</item>
        <item>Pembunuh</item>
        <item>Pembunuh</item>
    </string-array>
    <string-array name="data_spesialisasi">
        <item>Finisher/kerusakan</item>
        <item>Mengejar/Merusak</item>
        <item>Tusuk/Pecahkan</item>
        <item>Pengisian/regenerasi</item>
        <item>Pengendalian Massa</item>
        <item>Mengejar/Merusak</item>
        <item>Finisher/kerusakan Sihir</item>
        <item>penjaga/Pengendalian Massa</item>
        <item>Dorong/Pecahkan</item>
        <item>Penyelesai/Meledak</item>
        <item>Penyelesai/Meledak</item>
        <item>Kontrol/Ledakan</item>
        <item>Mengejar/Menyelesaikan</item>
        <item>Mengejar/Meledak</item>
    </string-array>
    <string-array name="data_rilis">
        <item>2016</item>
        <item>2019</item>
        <item>2020</item>
        <item>2020</item>
        <item>2016</item>
        <item>2019</item>
        <item>2020</item>
        <item>2020</item>
        <item>2022</item>
        <item>2024</item>
        <item>2019</item>
        <item>2019</item>
        <item>2019</item>
        <item>2019</item>
    </string-array>
    <string-array name="data_photo">
        <item>https://static.wikia.nocookie.net/mobile-legends/images/8/89/Hero011-portrait.png/revision/latest?cb=20231231181124</item>
        <item>https://static.wikia.nocookie.net/mobile-legends/images/7/7a/Hero161-portrait.png/revision/latest?cb=20240602234915</item>
        <item>https://static.wikia.nocookie.net/mobile-legends/images/a/a4/Hero051-portrait.png/revision/latest?cb=20240602234727</item>
        <item>https://static.wikia.nocookie.net/mobile-legends/images/8/88/Hero041-portrait.png/revision/latest?cb=20240605132522</item>
        <item>https://static.wikia.nocookie.net/mobile-legends/images/b/b8/Hero061-portrait.png/revision/latest?cb=20240605132742</item>
        <item>https://static.wikia.nocookie.net/mobile-legends/images/0/01/Hero071-portrait.png/revision/latest?cb=20240605132947</item>
        <item>https://static.wikia.nocookie.net/mobile-legends/images/4/41/Hero081-portrait.png/revision/latest?cb=20240605133151</item>
        <item>https://static.wikia.nocookie.net/mobile-legends/images/9/9d/Hero091-portrait.png/revision/latest?cb=20240605133305</item>
        <item>https://static.wikia.nocookie.net/mobile-legends/images/8/8d/Hero111-portrait.png/revision/latest?cb=20240605133609</item>
        <item>https://static.wikia.nocookie.net/mobile-legends/images/d/d9/Hero131-portrait.png/revision/latest?cb=20240605133854</item>
        <item>https://static.wikia.nocookie.net/mobile-legends/images/4/44/Hero121-portrait.png/revision/latest?cb=20240605133847</item>
        <item>https://static.wikia.nocookie.net/mobile-legends/images/a/ab/Hero151-portrait.png/revision/latest?cb=20240605150035</item>
        <item>https://static.wikia.nocookie.net/mobile-legends/images/7/7f/Hero171-portrait.png/revision/latest?cb=20240605151224</item>
        <item>https://static.wikia.nocookie.net/mobile-legends/images/3/35/Hero211-portrait.png/revision/latest?cb=20220525170632</item>
    </string-array>
</resources>